--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -3,10 +3,8 @@ html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
-    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
-    link(rel='stylesheet', href='/stylesheets/all.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel="stylesheet", href="./bootstrap/css/amelia.bootstrap.css")
+    link(rel="stylesheet", href="/bootstrap/css/amelia.bootstrap.css")
   body
     nav.navbar.fixed-top.navbar-expand-md.navbar-light
       .container
@@ -28,4 +26,5 @@ html
 
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js', integrity='sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49', crossorigin='anonymous')
-    script(src='/javascripts/bootstrap.min.js')
+    script(src='/bootstrap/js/bootstrap.min.js')
+    script(scr='/javascripts/jquery-1.11.1.min.js')
